# noether-walk

./: .gitignore  .zenodo.json  CITATION.cff  FALSIFY.md  LICENSE  LICENSE-texts.md  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml  falsification-attempt.md  replication-report.md
.github/workflows/: ci.yml  paper.yml  traffic.yml
meta/: README.md  discovery-preregistration.md  traffic_snapshot.py
meta/traffic/: ledger.json
paper/: draft.md  outline.md  pdf.yaml  references.md
repro/: README.md
repro/expected/: tier0_formation.json  tier0_installed.json
src/invariants/: __init__.py  contract.py  guards.py  tier0.py  verdicts.py
src/invariants/toy/: __init__.py  formation.py  installed.py  model.py  task.py
story/: ch01-the-graveyard-of-resemblances.md  ch02-the-notebook.md  ch03-a-ladder-of-worlds.md  ch04-the-day-we-fooled-ourselves.md  ch05-how-big-is-a-notebook.md  ch06-not-all-notebooks-are-alike.md  ch07-a-law-at-last.md  ch08-the-declared-and-the-discovered.md  ch09-what-structure-costs.md  ch10-where-the-trail-goes-cold.md  epilogue-postcards.md  outline.md
tests/: test_contract.py  test_guards.py  test_toy.py
